tests/final/expect/15__diag__axis4_wave9_macro_alias_permute_a_arity_fail_no_crash.diag
Diagnostics:
Error at (1084299:28): Undeclared identifier
   Hint: AX4_W9_PERM_A_TARGET
   Spelling: axis4_wave9_perm_a_layer_a.h:1084299:28
